# NATest

./: readme.txt
code/Example/: Example.vcxproj
code/Example/src/: main.c
code/NATest/: CMakeLists.txt  NATest.vcxproj
code/NATest/src/: NAMacroPrintout.c  NAMacroPrintout.h  NAMacroPrintoutII.h  NATest.c  NATest.h  NATestEnvironment.h  NATestII.h  NATestList.h  NATestString.c  NATestString.h  NATestStringII.h  NATesting.c  NATesting.h  NATestingEnvironment.h
code/NATest/src/Core/: NAMacroPrintout.c  NAMacroPrintoutII.h  NATest.c  NATestEnvironment.h  NATestII.h  NATestList.h  NATestString.c  NATestString.h  NATestStringII.h
code/NATestExample/: CMakeLists.txt
code/NATestExample/src/: main.c
proj/Example/: Example.sln
proj/Example.xcodeproj/: project.pbxproj
proj/Example/Example.xcodeproj/: project.pbxproj
proj/NATest/: NATest.sln
proj/NATest/NATest.xcodeproj/: project.pbxproj
